Bug 1320032 - Early return if the size of mask surface will be empty. r=mstange, a=jcristau

MozReview-Commit-ID: Bd0ddkyNCMr